Updated to move generated file to dist

--- a/test/index.html
+++ b/test/index.html
@@ -17,7 +17,8 @@
             paths: {
                 'ecma_ast': '../dependencies/ecma-ast/lib',
                 'ecma_ast_zipper': '../lib',
-                'neith': '../dependencies/neith/lib'
+                'neith': '../dependencies/neith/dist',
+                'nu': '../dependencies/nu/lib'
             }
         });
         require(
